--- a/Assessment_template.tex
+++ b/Assessment_template.tex
@@ -224,8 +224,7 @@ recent years since the declaration.
 
 \begin{table}[ht]
 \centering
-\caption{Landings (mt) for the past 10 years forPacific ocean perch by 
-                                            fleet.} 
+\caption{Landings (mt) for the past 10 years for Pacific ocean perch by fleet.} 
 \label{tab:Exec_catch}
 \begin{tabular}{l>{\centering}p{0.7in}>{\centering}p{0.7in}>{\centering}p{0.7in}>{\centering}p{0.7in}>{\centering}p{0.7in}>{\centering}p{0.7in}}
   \hline
@@ -339,32 +338,30 @@ confidnce intervals (dashed lines) for the base case assessment model.
 table for last 10 years and graph with long term estimates.}
 
 Recruitment Figure: (Figure \ref{fig:Recruits_all})\\
-Recruitment Tables: (Tables \ref{tab:Recruit_mod1},
-\ref{tab:Recruit_mod2} and \ref{tab:Recruit_mod3})
+Recruitment Tables: (Tables \ref{tab:Recruit_mod1})
 
-\textbackslash{}begin\{table\}{[}ht{]} \centering
-\textbackslash{}caption\{Recent estimated trnd inrecruitment with
-approximate 95\% confidence intervals determined from the base model\}
+\begin{table}[ht]
+\centering
+\caption{Recent estimated trend in recruitment with approximate 95% 
+                                        confidence intervals determined from the base model} 
 \label{tab:Recruit_mod1}
-
-\begin{tabular}{>{\centering}p{.8in}>{\centering}p{1.6in}>{\centering}p{1.3in}}
+\begin{tabular}{>{\centering}p{.8in}>{\centering}p{1.0in}>{\centering}p{1.4in}>{\centering}p{1.0in}>{\centering}p{1.4in}}
   \hline
-Year & Estimated Recruitment (millions) & \~{} 95\% confidence interval \\ 
+Year & Estimated Recruitment & \~{} 95\% confidence interval & Estimated Recruitment Devs. & \~{} 95\% confidence interval \\ 
   \hline
-2008 & 48.00 & 30 - 78 \\ 
-  2009 & 10.00 & 5 - 18 \\ 
-  2010 & 4.00 & 2 - 9 \\ 
-  2011 & 15.00 & 8 - 25 \\ 
-  2012 & 3.00 & 1 - 7 \\ 
-  2013 & 30.00 & 17 - 53 \\ 
-  2014 & 2.00 & 1 - 7 \\ 
-  2015 & 4.00 & 1 - 13 \\ 
-  2016 & 4.00 & 1 - 15 \\ 
-  2017 & 5.00 & 2 - 12 \\ 
+2008 & 48465.00 & 30145 - 77918 & 3.16 & 3.017 - 3.313 \\ 
+  2009 & 9731.00 & 5203 - 18198 & 1.54 & 1.081 - 1.993 \\ 
+  2010 & 3848.00 & 1697 - 8724 & 0.60 & -0.133 - 1.327 \\ 
+  2011 & 14688.00 & 8492 - 25404 & 1.93 & 1.609 - 2.246 \\ 
+  2012 & 2574.00 & 965 - 6863 & 0.10 & -0.852 - 1.046 \\ 
+  2013 & 29962.00 & 16892 - 53146 & 2.40 & 2.034 - 2.757 \\ 
+  2014 & 2279.00 & 748 - 6947 & -0.37 & -1.509 - 0.762 \\ 
+  2015 & 3756.00 & 1052 - 13404 & -0.00 & -1.369 - 1.359 \\ 
+  2016 & 4228.00 & 1181 - 15135 & 0.00 & -1.372 - 1.372 \\ 
+  2017 & 4583.00 & 1729 - 12146 & 0.00 & -0.970 - 0.970 \\ 
    \hline
 \end{tabular}
-
-\textbackslash{}end\{table\}
+\end{table}
 
 \FloatBarrier
 
@@ -690,8 +687,8 @@ Spawning Output &  8344 &  8589 &  8719 &  8817 &  9021 & 10051 & 11807 & 14162 
 Depletion & 0.150 & 0.154 & 0.157 & 0.158 & 0.162 & 0.180 & 0.212 & 0.254 & 0.300 & 0.339 \\ 
   ~95\% CI & 0.103 - 0.197 & 0.105 - 0.203 & 0.107 - 0.206 & 0.107 - 0.209 & 0.110 - 0.214 & 0.123 - 0.238 & 0.145 - 0.279 & 0.174 - 0.334 & 0.206 - 0.394 & 0.233 - 0.446 \\ 
    \hline
-Recruits & 48 & 10 &  4 & 15 &  3 & 30 &  2 &  4 &  4 &  5 \\ 
-  ~95\% CI & 30 - 78 & 5 - 18 & 2 - 9 & 8 - 25 & 1 - 7 & 17 - 53 & 1 - 7 & 1 - 13 & 1 - 15 & 2 - 12 \\ 
+Recruits & 48465 &  9731 &  3848 & 14688 &  2574 & 29962 &  2279 &  3756 &  4228 &  4583 \\ 
+  ~95\% CI & 30145 - 77918 & 5203 - 18198 & 1697 - 8724 & 8492 - 25404 & 965 - 6863 & 16892 - 53146 & 748 - 6947 & 1052 - 13404 & 1181 - 15135 & 1729 - 12146 \\ 
    \hline
 \end{tabular}
 }
