--- a/Assessment_template.tex
+++ b/Assessment_template.tex
@@ -525,20 +525,20 @@ Management performance table: Table \ref{tab:mnmgt_perform}
                               plus the model estimated discarded biomass.} 
 \label{tab:mnmgt_perform}
 \scalebox{0.9}{
-\begin{tabular}{>{\raggedleft}p{1in}>{\centering}p{1in}>{\centering}p{1in}>{\centering}p{1in}>{\centering}p{1in}}
+\begin{tabular}{>{\raggedleft}p{0.5in}>{\centering}p{1.1in}>{\centering}p{1.1in}>{\centering}p{1.1in}>{\centering}p{1.1in}>{\centering}p{1.1in}}
   \hline
-Year & OFL (mt; ABC prior to 2011) & ABC (mt) & ACL (mt; OY prior to 2011) & Estimated total catch (mt) \\ 
+Year & OFL (mt; ABC prior to 2011) & ABC (mt) & ACL (mt; OY prior to 2011) & Total landings (mt) & Estimated total catch (mt) \\ 
   \hline
-\textbf{2007} & - & - & - & - \\ 
-  \textbf{2008} & - & - & - & - \\ 
-  \textbf{2009} & - & - & - & - \\ 
-  \textbf{2010} & - & - & - & - \\ 
-  \textbf{2011} & - & - & - & - \\ 
-  \textbf{2012} & - & - & - & - \\ 
-  \textbf{2013} & - & - & - & - \\ 
-  \textbf{2014} & - & - & - & - \\ 
-  \textbf{2015} & - & - & - & - \\ 
-  \textbf{2016} & - & - & - & - \\ 
+\text{2007} & - & - & 150 & NA & NA \\ 
+  \text{2008} & - & - & 150 & NA & NA \\ 
+  \text{2009} & - & - & 189 & NA & NA \\ 
+  \text{2010} & - & - & 200 & NA & NA \\ 
+  \text{2011} & - & - & 180 & NA & NA \\ 
+  \text{2012} & - & - & 183 & NA & NA \\ 
+  \text{2013} & - & - & 150 & NA & NA \\ 
+  \text{2014} & - & - & 153 & NA & NA \\ 
+  \text{2015} & - & - & 158 & NA & NA \\ 
+  \text{2016} & - & - & 164 & NA & NA \\ 
    \hline
 \end{tabular}
 }
@@ -571,24 +571,24 @@ Yield curve: Figure \ref{fig:Yield_all}
 
 \begin{table}[ht]
 \centering
-\caption{Projections of potential OFL (mt) and the ACL (mt).} 
+\caption{Projections of potential OFL (mt) and ACL (mt) and the estimated spawning biomass and relative biomass.} 
 \label{tab:OFL_projection}
-\begin{tabular}{lrr}
+\begin{tabular}{lllll}
   \hline
-Year & OFL & ACL \\ 
+Year & OFL & ACL & Spawning Biomass & Relative Biomass \\ 
   \hline
-2017 & 1389.78 & 1328.63 \\ 
-  2018 & 1529.80 & 1462.48 \\ 
-  2019 & 1651.26 & 1578.61 \\ 
-  2020 & 1752.90 & 1675.78 \\ 
-  2021 & 1823.43 & 1743.20 \\ 
-  2022 & 1855.87 & 1774.21 \\ 
-  2023 & 1854.36 & 1772.77 \\ 
-  2024 & 1829.96 & 1749.45 \\ 
-  2025 & 1793.89 & 1714.96 \\ 
-  2026 & 1754.08 & 1676.90 \\ 
-  2027 & 1715.09 & 1639.62 \\ 
-  2028 & 1679.03 & 1605.15 \\ 
+2017 & 1390 & 1329 & 18909 & 0.339 \\ 
+  2018 & 1530 & 1462 & 20169 & 0.362 \\ 
+  2019 & 1651 & 1579 & 21186 & 0.380 \\ 
+  2020 & 1753 & 1676 & 22238 & 0.399 \\ 
+  2021 & 1823 & 1743 & 23473 & 0.421 \\ 
+  2022 & 1856 & 1774 & 24463 & 0.439 \\ 
+  2023 & 1854 & 1773 & 24949 & 0.448 \\ 
+  2024 & 1830 & 1749 & 25060 & 0.450 \\ 
+  2025 & 1794 & 1715 & 24883 & 0.447 \\ 
+  2026 & 1754 & 1677 & 24888 & 0.447 \\ 
+  2027 & 1715 & 1640 & 24916 & 0.447 \\ 
+  2028 & 1679 & 1605 & 24850 & 0.446 \\ 
    \hline
 \end{tabular}
 \end{table}\begin{table}[ht]
