Finished the ES management table and added to summary table

--- a/Assessment_template.tex
+++ b/Assessment_template.tex
@@ -529,16 +529,16 @@ Management performance table: Table \ref{tab:mnmgt_perform}
   \hline
 Year & OFL (mt; ABC prior to 2011) & ABC (mt) & ACL (mt; OY prior to 2011) & Total landings (mt) & Estimated total catch (mt) \\ 
   \hline
-\text{2007} & - & - & 150 & NA & NA \\ 
-  \text{2008} & - & - & 150 & NA & NA \\ 
-  \text{2009} & - & - & 189 & NA & NA \\ 
-  \text{2010} & - & - & 200 & NA & NA \\ 
-  \text{2011} & - & - & 180 & NA & NA \\ 
-  \text{2012} & - & - & 183 & NA & NA \\ 
-  \text{2013} & - & - & 150 & NA & NA \\ 
-  \text{2014} & - & - & 153 & NA & NA \\ 
-  \text{2015} & - & - & 158 & NA & NA \\ 
-  \text{2016} & - & - & 164 & NA & NA \\ 
+\text{2007} & - & - & 150 & 134 & 138 \\ 
+  \text{2008} & - & - & 150 & 92 & 151 \\ 
+  \text{2009} & - & - & 189 & 97 & 168 \\ 
+  \text{2010} & - & - & 200 & 99 & 161 \\ 
+  \text{2011} & - & - & 180 & 60 & 60 \\ 
+  \text{2012} & - & - & 183 & 58 & 59 \\ 
+  \text{2013} & - & - & 150 & 57 & 57 \\ 
+  \text{2014} & - & - & 153 & 45 & 46 \\ 
+  \text{2015} & - & - & 158 & 60 & 60 \\ 
+  \text{2016} & - & - & 164 & 57 & 58 \\ 
    \hline
 \end{tabular}
 }
@@ -671,10 +671,10 @@ Year & OFL & ACL & Spawning Biomass & Relative Biomass \\
   \hline
 Quantity & 2009 & 2010 & 2011 & 2012 & 2013 & 2014 & 2015 & 2016 & 2017 & 2018 \\ 
   \hline
-Landings (mt) &  &  &  &  &  &  &  &  &  &  \\ 
-  Total Est. Catch (mt) &  &  &  &  &  &  &  &  &  &  \\ 
-  OFL (mt) &  &  &  &  &  &  &  &  &  &  \\ 
-  ACL (mt) &  &  &  &  &  &  &  &  &  &  \\ 
+Landings (mt) & - & - & - & - & - & - & - & - & - & - \\ 
+  Total Est. Catch (mt) & 150 & 189 & 200 & 180 & 183 & 150 & 153 & 158 & 164 & 281 \\ 
+  OFL (mt) & 92 & 97 & 99 & 60 & 58 & 57 & 45 & 60 & 57 &  \\ 
+  ACL (mt) & 151 & 168 & 161 &  60 &  59 &  57 &  46 &  60 &  58 &  \\ 
    \hline
 (1-$SPR$)(1-$SPR_{50\%}$) & 0.40 & 0.41 & 0.40 & 0.16 & 0.15 & 0.14 & 0.10 & 0.11 & 0.09 &  \\ 
    \hline
@@ -2351,7 +2351,7 @@ and open bubbles are negative residuals (observed \textless{} expected).
 \includegraphics{./r4ss/plots_mod1/comp_lenfit_data_weighting_TA1.8_Fishery.png}
 \caption{Francis data weighting method TA1.8 Fishery Suggested sample
 size adjustment (with 95\% interval) for len data from Fishery: 0.146
-(0.0976\_0.2693)
+(0.0954\_0.2643)
 \label{fig:mod1_4_comp_lenfit_data_weighting_TA1.8_Fishery}}
 \end{figure}
 
@@ -2390,7 +2390,7 @@ size adjustment (with 95\% interval) for len data from Fishery: 0.146
 \includegraphics{./r4ss/plots_mod1/comp_lenfit_data_weighting_TA1.8_Fishery.png}
 \caption{Francis data weighting method TA1.8 Fishery Suggested sample
 size adjustment (with 95\% interval) for len data from Fishery: 0.146
-(0.0933\_0.2688)
+(0.0947\_0.2645)
 \label{fig:mod1_9_comp_lenfit_data_weighting_TA1.8_Fishery}}
 \end{figure}
 
