--- a/Assessment_template.tex
+++ b/Assessment_template.tex
@@ -250,7 +250,7 @@ Year & California & Oregon & Washington & At-sea Hake & Research & Total Landing
 \centering
 \includegraphics{Assessment_template_files/figure-latex/unnamed-chunk-3-1.pdf}
 \caption{Landings of Pacific ocean perch for California, Oregon,
-Washington, the foriegn fishery (1966-1976), at-sea-hake fishery, and
+Washington, the Foriegn fishery (1966-1976), At-Sea Hake fishery, and
 fishery independent surveys. \label{fig:Exec_catch1}}
 \end{figure}
 
