Catch description and survey tables

--- a/Assessment_template.tex
+++ b/Assessment_template.tex
@@ -848,9 +848,8 @@ A map showing the scope of the assessment and depicting boundaries for
 fisheries or data collection strata is provided in Figure
 \ref{fig:boundary_map}.
 
-\subsection{Life History}\label{life-history}
-
-\subsection{Ecosystem Considerations}\label{ecosystem-considerations-1}
+\subsection{Life History and Ecosystem
+Considerations}\label{life-history-and-ecosystem-considerations}
 
 \hl{Include: Ecosystem considerations (e.g., ecosystem role and trophic relationships of 
 the species, habitat requirements/preferences, relevant data on ecosystem processes 
@@ -960,14 +959,31 @@ were combined across areas for a coastwide removal total.
 
 \textbf{Discards}
 
+\textbf{\emph{Pikitch Study}}
+
+The Pikitch study was conducted between 1985 and 1987 (Pikitch et al.
+\protect\hyperlink{ref-pikitch_evaluation_1988}{1988}). The northern and
+southern boundaries of the study were \(48^\circ 42^\prime\) N latitude
+and \(42^\circ 60^\prime\) N. latitude respectively, which is primarily
+within the Columbia INPFC area (Pikitch et al.
+\protect\hyperlink{ref-pikitch_evaluation_1988}{1988} , Rogers and
+Pikitch \protect\hyperlink{ref-rogers_numerical_1992}{1992}).
+Participation in the study was voluntary and included vessels using
+bottom, midwater, and shrimp trawl gears.\\
+Observers of normal fishing operations on commercial vessels collected
+the data, estimated the total weight of the catch by tow and recorded
+the weight of species retained and discarded in the sample.
+
+\textbf{\emph{West Coast Groundfish Observer Program}}
+
 \subsubsection{Abundance Indices}\label{abundance-indices}
 
-\textbf{Sub-heading 1}
+\subsubsection{Fishery-Dependent Data:}\label{fishery-dependent-data}
 
-\textbf{Sub-heading 2}
+\textbf{Historical Commercial Catch-per-unit effort}
 
-\subsubsection{Fishery-Independent Data: possible
-sources}\label{fishery-independent-data-possible-sources}
+\subsubsection{Fishery-Independent
+Data:}\label{fishery-independent-data}
 
 \textbf{Northwest Fisheries Science Center (NWFSC) shelf-slope survey}
 
@@ -984,12 +1000,18 @@ small number (\textasciitilde{}700) of cells from a very large
 population of possible cells (greater than 11,000) distributed from the
 Mexican to the Canadian border.
 
+\hl{describe VAST}
+
+The estimated index of abundance is shown in \ref{tab:Index_Summary}.
+
 \textbf{Northwest Fisheries Science Center (NWFSC) slope survey}
 
 The NWFSC slope survey covered waters throughout the summer from 183 m
 to 1280 m north of \(34^\circ 30^\prime\) S, which is near Point
 Conception. The survey strata used to expand the biomass data for this
 assessment are shown in \hl{Table 5}.
+
+The estimated index of abundance is shown in \ref{tab:Index_Summary}.
 
 \textbf{Alaska Fisheries Science Center (AFSC) slope survey}
 
@@ -1006,6 +1028,8 @@ data for `r spp' are also shown in \hl{Table 7}.
 decided to include that year, which surveyed from \(43^\circ\) N
 latitude to the U.S.-Canada border. Therefore, only tows from
 \(43^\circ\) N latitude to the U.S.-Canada border were used.
+
+The estimated index of abundance is shown in \ref{tab:Index_Summary}.
 
 \textbf{Triennial Bottom Trawl Survey}
 
@@ -1044,22 +1068,15 @@ survey. The survey was analyzed as an early series (1980-1992) and a
 late series (1995-2004), as has been done in other West Coast rockfish
 assessments.
 
+\hl{Describe whether the time-series was split or retained as one index}
+
+The estimated index of abundance is shown in \ref{tab:Index_Summary}.
+
 \textbf{Pacific ocean perch Survey}
 
-\textbf{Pikitch Study}
-
-The Pikitch study was conducted between 1985 and 1987 (Pikitch et al.
-\protect\hyperlink{ref-pikitch_evaluation_1988}{1988}). The northern and
-southern boundaries of the study were \(48^\circ 42^\prime\) N latitude
-and \(42^\circ 60^\prime\) N. latitude respectively, which is primarily
-within the Columbia INPFC area (Pikitch et al.
-\protect\hyperlink{ref-pikitch_evaluation_1988}{1988} , Rogers and
-Pikitch \protect\hyperlink{ref-rogers_numerical_1992}{1992}).
-Participation in the study was voluntary and included vessels using
-bottom, midwater, and shrimp trawl gears.\\
-Observers of normal fishing operations on commercial vessels collected
-the data, estimated the total weight of the catch by tow and recorded
-the weight of species retained and discarded in the sample.
+A survey targeted designed to sample Pacific ocean perch was conducted
+in 1979 and again in 1985. The estimated index of abundance is shown in
+\ref{tab:Index_Summary}.
 
 \subsubsection{Biological Parameters and
 Data}\label{biological-parameters-and-data}
@@ -1112,13 +1129,9 @@ Age structure data were available from the following sources:
   \item Last Source     
 \end{itemize}
 
-Length-at-age was initially estimated external to the population
-dynamics models using the von Bertalanffy growth curve,
-\(L_i = L_{\infty}e^{(-k[t-t_0])}\), where \(L_i\) is the length (cm) at
-age \(i\), \(t\) is age in years, \(k\) is rate of increase in growth,
-\(t_0\) is the intercept, and \(L_{\infty}\) is the asymptotic length.
+\vspace{.5cm}
 
-\subsubsection{Natural mortality}\label{natural-mortality}
+\textbf{Natural mortality}
 
 Historic Pacific ocean perch ages determined using scales and surface
 reading methods of otoliths, resulted in estimates of natural mortality
@@ -1146,8 +1159,9 @@ maximum age of 100 was used in the developement of the prior where
 female natural moratility was set equal to 0.05 and male natural
 mortality estimated as an offset from females at 0.054.
 
-\subsubsection{Sex ratio, maturation, and
-fecundity}\label{sex-ratio-maturation-and-fecundity}
+\vspace{.5cm}
+
+\textbf{Sex ratio, maturation, and fecundity}
 
 Examining all biological data sources, the sex ratio of young fish are
 within 5\% of 1:1 by either length or age (Figure \ref{fig:sexratio} and
@@ -1173,8 +1187,9 @@ Pacific ocean perch was esimtated equal to
 1.08643\(L\)\textsuperscript{1.44} in millions of eggs. Spawning output
 at length is shown in Figure \ref{fig:fecundity}.
 
-\subsubsection{Length-weight
-relationship}\label{length-weight-relationship}
+\vspace{.5cm}
+
+\textbf{Length-weight relationship}
 
 The length-weight relationship for Pacific ocean perch was esimated
 outside the model using all biological data available from fishery and
@@ -1182,27 +1197,13 @@ fishery-independant data sources where the female weight-at-length in
 grams was estimated at 0.0000106\(L\)\textsuperscript{3.08} and males at
 0.000014\(L\)\textsuperscript{3} where \(L\) is length in cm.
 
-\subsubsection{Growth (length-at-age)}\label{growth-length-at-age}
+\vspace{.5cm}
+
+\textbf{Growth (length-at-age)}
 
 \hl{Write if estiamted or fixed in the final model}
 
 \vspace{.5cm} \textbf{Aging Precision And Bias}
-
-\vspace{.5cm} \textbf{Weight-Length}
-
-The weight-length relationship is based on the standard power function:
-\(W = \alpha(L^\beta)\) where \(W\) is individual weight (kg), \(L\) is
-length (cm), and \(\alpha\) and \(\beta\) are coefficients used as
-constants.
-
-\vspace{.5cm} \textbf{Maturity And Fecundity}
-
-\vspace{.5cm} \textbf{Natural Mortality}
-
-Natural mortality for wild fish populations is extremely difficult to
-estimate.
-
-\vspace{.5cm} \textbf{Sex ratios}
 
 \subsubsection{Environmental Or Ecosystem Data Included In The
 Assessment}\label{environmental-or-ecosystem-data-included-in-the-assessment}
@@ -1726,7 +1727,7 @@ Year & Trips & Fish & Sample Size \\
 \begin{table}[ht]
 \centering
 \caption{Summary of Pacific ocean perch survey length samples used in the stock assessment.} 
-\label{tab:Comm_Lengths}
+\label{tab:POP_Lengths}
 \begin{tabular}{>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{1in}}
   \hline
 Year & Tows & Fish & Sample Size \\ 
@@ -1740,7 +1741,7 @@ Year & Tows & Fish & Sample Size \\
 \begin{table}[ht]
 \centering
 \caption{Summary of Triennial survey length samples used in the stock assessment.} 
-\label{tab:Comm_Lengths}
+\label{tab:TriennialLengths}
 \begin{tabular}{>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{1in}}
   \hline
 Year & Tows & Fish & Sample Size \\ 
@@ -1761,7 +1762,7 @@ Year & Tows & Fish & Sample Size \\
 \begin{table}[ht]
 \centering
 \caption{Summary of AFSC slope survey length samples used in the stock assessment.} 
-\label{tab:Comm_Lengths}
+\label{tab:AFSC_Lengths}
 \begin{tabular}{>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{1in}}
   \hline
 Year & Tows & Fish & Sample Size \\ 
@@ -1778,7 +1779,7 @@ Year & Tows & Fish & Sample Size \\
 \begin{table}[ht]
 \centering
 \caption{Summary of NWFSC slope survey length samples used in the stock assessment.} 
-\label{tab:Comm_Lengths}
+\label{tab:NWslope_Lengths}
 \begin{tabular}{>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{1in}}
   \hline
 Year & Tows & Fish & Sample Size \\ 
@@ -1792,7 +1793,7 @@ Year & Tows & Fish & Sample Size \\
 \begin{table}[ht]
 \centering
 \caption{Summary of NWFSC shelf/slope survey length samples used in the stock assessment.} 
-\label{tab:Comm_Lengths}
+\label{tab:NWcombo_Lengths}
 \begin{tabular}{>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{1in}}
   \hline
 Year & Tows & Fish & Sample Size \\ 
@@ -1817,7 +1818,7 @@ Year & Tows & Fish & Sample Size \\
 \begin{table}[ht]
 \centering
 \caption{Summary of commercial fishery age samples used in the stock assessment.} 
-\label{tab:Comm_Lengths}
+\label{tab:Comm_Ages}
 \begin{tabular}{>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{1in}}
   \hline
 Year & Trips & Fish & Sample Size \\ 
@@ -1852,7 +1853,7 @@ Year & Trips & Fish & Sample Size \\
 \begin{table}[ht]
 \centering
 \caption{Summary of Pacific ocean perch survey age samples used in the stock assessment.} 
-\label{tab:Comm_Lengths}
+\label{tab:POP_Ages}
 \begin{tabular}{>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{1in}}
   \hline
 Year & Tows & Fish & Sample Size \\ 
@@ -1865,7 +1866,7 @@ Year & Tows & Fish & Sample Size \\
 \begin{table}[ht]
 \centering
 \caption{Summary of Triennial survey age samples used in the stock assessment.} 
-\label{tab:Comm_Lengths}
+\label{tab:Triennial_Ages}
 \begin{tabular}{>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{1in}}
   \hline
 Year & Tows & Fish & Sample Size \\ 
@@ -1883,7 +1884,7 @@ Year & Tows & Fish & Sample Size \\
 \begin{table}[ht]
 \centering
 \caption{Summary of NWFSC slope survey age samples used in the stock assessment.} 
-\label{tab:Comm_Lengths}
+\label{tab:NWslope_Ages}
 \begin{tabular}{>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{1in}}
   \hline
 Year & Tows & Fish & Sample Size \\ 
@@ -1897,7 +1898,7 @@ Year & Tows & Fish & Sample Size \\
 \begin{table}[ht]
 \centering
 \caption{Summary of NWFSC shelf/slope survey age samples used in the stock assessment.} 
-\label{tab:Comm_Lengths}
+\label{tab:NWFcombo_Ages}
 \begin{tabular}{>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{1in}}
   \hline
 Year & Tows & Fish & Sample Size \\ 
