--- a/Assessment_template.Rmd
+++ b/Assessment_template.Rmd
@@ -522,11 +522,11 @@ A description of each data source is below.
 
 **Washington**
 
-Historical commercial fishery landigns of `r spp` from Washington for the years 1918-1980 were obtained from Theresa Tsou (WDFW) and Phillip Weyland (WDFW).  This assessment is the first `r spp` assessment to include a state provide historical catch reconstruction and hence, the historical catches for Washington vary markedly from those used in the 2011 assessment.  Recent landings (1981-2016) were obtained from PacFIN (Pacific Fisheries Information Network (PacFIN) retrieval dated \hl{March 3, 2015}, Pacific States Marine Fisheries Commission, Portland, Oregon; www.psmfc.org).
+Historical commercial fishery landigns of `r spp` from Washington for the years 1918-2016 were obtained from Theresa Tsou (WDFW) and Phillip Weyland (WDFW).  This assessment is the first `r spp` assessment to include a state provide historical catch reconstruction and hence, the historical catches for Washington vary markedly from those used in the 2011 assessment.  Due to Recent landings (1981-2016) were obtained directly from Washington state rather than from PacFIN (Pacific Fisheries Information Network (PacFIN) due to identified missing catches not available within PacFIN for `r spp`.
 
 **Oregon**
 
-Historical commercial fishery landings of `r spp` from Oregon for the years 1892-1986 were obtained from Alison Dauble (ODFW). A description of the methods can be found in [@karnowski_historical_2014]. Recent landings (1987-2016) were obtained from PacFIN (Pacific Fisheries Information Network (PacFIN) retrieval dated \hl{March 3, 2015}, Pacific States Marine Fisheries Commission, Portland, Oregon; www.psmfc.org).
+Historical commercial fishery landings of `r spp` from Oregon for the years 1892-1986 were obtained from Alison Dauble (ODFW). A description of the methods can be found in Karnowski et al. [-@karnowski_historical_2014]. Recent landings (1987-2016) were obtained from PacFIN retrieval dated \hl{March 3, 2015}, Pacific States Marine Fisheries Commission, Portland, Oregon; www.psmfc.org).  The catch data in from the POP and POP2 categories contained within PacFIN for `r spp` were used for this assessment.  Additional cathes from 1987-1999 for `r spp` under the UROCK category not yet available in PacFIN were received directly from the state and combined with the catch data available for that period within PacFIN.
 
 **California**
 
@@ -542,44 +542,7 @@ From the 1960s through the early 1970s, foreign trawling enterprises harvested c
 
 **Discards**
 
-
-###Abundance Indices
-
-**Sub-heading 1**
-
-**Sub-heading 2**
-
-
-
-<!-- ************FISHERY-INDPENDENT DATA*********************************** -->
-
-###Fishery-Independent Data: possible sources
-
-**Northwest Fisheries Science Center (NWFSC) shelf-slope survey**
-
-The NWFSC shelf-slope survey is based on a random-grid design; covering the coastal waters from a depth of 55 m to 1,280 m [@bradburn_2003_2011]. This design uses four chartered industry vessels in most years, assigned to a roughly equal number of randomly selected grid cells. The survey, which has been conducted from late-May to early-October each year, is divided into two 2-vessel passes of the coast, which are executed from north to south. This design therefore incorporates both vessel-to-vessel differences in catchability as well as variance associated with selecting a relatively small number (~700) of cells from a very large population of possible cells (greater than 11,000) distributed from the Mexican to the Canadian border. 
-
-**Northwest Fisheries Science Center (NWFSC) slope survey**   
-
-The NWFSC slope survey covered waters throughout the summer from 183 m to 1280 m north of $34^\circ 30^\prime$ S, which is near Point Conception. The survey strata used to expand the biomass data for this assessment are shown in \hl{Table 5}. 
-
-
-**Alaska Fisheries Science Center (AFSC) slope survey**   
-
-The AFSC slope survey operated during autumn (October-November) aboard the R/V Miller Freeman. Partial survey coverage of the U.S. west coast occurred during 1988-96 and complete coverage (north of $34^\circ 30^\prime$ S) during 1997, 1999, 2000, and 2001. Only the four years of consistent and complete surveys plus 1996, which surveyed north of $43^\circ$ N latitude to the U.S.-Canada border, were used in this assessment. The number of tows ranged from \hl{8 in 2001 to 26 in 1996 (Table 7)}. The numbers of tows with length data for 'r spp' are also shown in \hl{Table 7}. \hl{Because a large number of positive tows occurred in 1996}, it was decided to include that year, which surveyed from $43^\circ$ N latitude to the U.S.-Canada border. Therefore, only tows from $43^\circ$ N latitude to the U.S.-Canada border were used.
-
-**Triennial Bottom Trawl Survey**
-
-The triennial survey was first conducted by the AFSC in 1977 and spanned the timeframe from 1977-2004. The survey's design and sampling methods are most recently described in [@weinberg_estimation_2002]. Its basic design was a series of equally-spaced transects from which searches for tows in a specific depth range were initiated \hl{(Figure 5)}. The survey design has changed slightly over the period of time \hl{(Table 4, Figure 3)}. In general, all of the surveys were conducted in the mid-summer through early fall: the 1977 survey was conducted from early July through late September; the surveys from 1980 through 1989 ran from mid-July to late September; the 1992 survey spanned from mid-July through early October; the 1995 survey was conducted from early June to late August; the 1998 survey ran from early June through early August; and the 2001 and 2004 surveys were conducted in May-July \hl{(Figure 4)}.
-
-Haul depths ranged from 91-457 m during the 1977 survey with no hauls shallower than 91 m. The surveys in 1980, 1983, and 1986 covered the West Coast south to $36.8^\circ$ N latitude and a depth range of 55-366 meters. The surveys in 1989 and 1992 covered the same depth range but extended the southern range to $34.5^\circ$ N (near Point Conception). From 1995 through 2004, the surveys covered the depth range 55-500 meters and surveyed south to $34.5^\circ$ N. In the final year of the triennial series (2004), the NWFSC's Fishery Resource and Monitoring division (FRAM) conducted the survey and followed very similar protocols as the AFSC.
-
-Given the different depths surveyed during 1977, the data from that year were not included in this assessment. Water hauls [@zimmermann_influence_2003] and tows located in Canadian waters were also excluded from the analysis of this survey. The survey was analyzed as an early series (1980-1992) and a late series (1995-2004), as has been done in other West Coast rockfish assessments.
-
-**Pacific ocean perch Survey**
-
-
-**Pikitch Study** 
+***Pikitch Study*** 
 
 The Pikitch study was conducted between 1985 and 1987 [@pikitch_evaluation_1988].  The northern 
 and southern boundaries of the study were $48^\circ 42^\prime$ N latitude and 
@@ -589,7 +552,59 @@ was voluntary and included vessels using bottom, midwater, and shrimp trawl gear
 Observers of normal fishing operations on commercial vessels collected the data, 
 estimated the total weight of the catch by tow and recorded the weight of species 
 retained and discarded in the sample.  
+
+***West Coast Groundfish Observer Program***
  
+
+
+###Abundance Indices
+
+###Fishery-Dependent Data:
+
+**Historical Commercial Catch-per-unit effort**
+
+
+<!-- ************FISHERY-INDPENDENT DATA*********************************** -->
+
+###Fishery-Independent Data:
+
+**Northwest Fisheries Science Center (NWFSC) shelf-slope survey**
+
+The NWFSC shelf-slope survey is based on a random-grid design; covering the coastal waters from a depth of 55 m to 1,280 m [@bradburn_2003_2011]. This design uses four chartered industry vessels in most years, assigned to a roughly equal number of randomly selected grid cells. The survey, which has been conducted from late-May to early-October each year, is divided into two 2-vessel passes of the coast, which are executed from north to south. This design therefore incorporates both vessel-to-vessel differences in catchability as well as variance associated with selecting a relatively small number (~700) of cells from a very large population of possible cells (greater than 11,000) distributed from the Mexican to the Canadian border. 
+
+\hl{describe VAST}
+
+The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.
+
+**Northwest Fisheries Science Center (NWFSC) slope survey**   
+
+The NWFSC slope survey covered waters throughout the summer from 183 m to 1280 m north of $34^\circ 30^\prime$ S, which is near Point Conception. The survey strata used to expand the biomass data for this assessment are shown in \hl{Table 5}. 
+
+The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.
+
+
+**Alaska Fisheries Science Center (AFSC) slope survey**   
+
+The AFSC slope survey operated during autumn (October-November) aboard the R/V Miller Freeman. Partial survey coverage of the U.S. west coast occurred during 1988-96 and complete coverage (north of $34^\circ 30^\prime$ S) during 1997, 1999, 2000, and 2001. Only the four years of consistent and complete surveys plus 1996, which surveyed north of $43^\circ$ N latitude to the U.S.-Canada border, were used in this assessment. The number of tows ranged from \hl{8 in 2001 to 26 in 1996 (Table 7)}. The numbers of tows with length data for 'r spp' are also shown in \hl{Table 7}. \hl{Because a large number of positive tows occurred in 1996}, it was decided to include that year, which surveyed from $43^\circ$ N latitude to the U.S.-Canada border. Therefore, only tows from $43^\circ$ N latitude to the U.S.-Canada border were used.
+
+The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.
+
+**Triennial Bottom Trawl Survey**
+
+The triennial survey was first conducted by the AFSC in 1977 and spanned the timeframe from 1977-2004. The survey's design and sampling methods are most recently described in [@weinberg_estimation_2002]. Its basic design was a series of equally-spaced transects from which searches for tows in a specific depth range were initiated \hl{(Figure 5)}. The survey design has changed slightly over the period of time \hl{(Table 4, Figure 3)}. In general, all of the surveys were conducted in the mid-summer through early fall: the 1977 survey was conducted from early July through late September; the surveys from 1980 through 1989 ran from mid-July to late September; the 1992 survey spanned from mid-July through early October; the 1995 survey was conducted from early June to late August; the 1998 survey ran from early June through early August; and the 2001 and 2004 surveys were conducted in May-July \hl{(Figure 4)}.
+
+Haul depths ranged from 91-457 m during the 1977 survey with no hauls shallower than 91 m. The surveys in 1980, 1983, and 1986 covered the West Coast south to $36.8^\circ$ N latitude and a depth range of 55-366 meters. The surveys in 1989 and 1992 covered the same depth range but extended the southern range to $34.5^\circ$ N (near Point Conception). From 1995 through 2004, the surveys covered the depth range 55-500 meters and surveyed south to $34.5^\circ$ N. In the final year of the triennial series (2004), the NWFSC's Fishery Resource and Monitoring division (FRAM) conducted the survey and followed very similar protocols as the AFSC.
+
+Given the different depths surveyed during 1977, the data from that year were not included in this assessment. Water hauls [@zimmermann_influence_2003] and tows located in Canadian waters were also excluded from the analysis of this survey. The survey was analyzed as an early series (1980-1992) and a late series (1995-2004), as has been done in other West Coast rockfish assessments.
+
+\hl{Describe whether the time-series was split or retained as one index}
+
+The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.
+
+**Pacific ocean perch Survey**
+
+A survey targeted designed to sample `r spp` was conducted in 1979 and again in 1985.  The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.
+
 
 <!--************BIOLOGICAL DATA*********************************************-->
 ###Biological Parameters and Data
@@ -651,13 +666,15 @@ _Model Region 1_
 
 \vspace{.5cm}
 
-** Natural mortality **
+**Natural mortality**
+
 Historic `r spp` ages determined using scales and surface reading methods of otoliths, resulted in estimates of natural mortality of between 0.10 and 0.20yr^-1^ with a longevity
-less than 30 years[@gunderson_population_1977].  Based on break-and-burn method of age determination using otoliths, the maximum age of `r spp` was revised to be 90 years [@chilton_age_1982]. The updated understanding concerning `r spp` longevity reduced the estimate of natural morality based on Hoenig's [-@hoenig_empirical_1983] relationship to 0.059yr^-1^. The previous assessment applied a prior distribution on natural mortality based upon multiple life history correlates (including Hoenig's method, Gunderson gonadosomatic index [-@gunderson_trade-off_1997], and McCoy and Gillooly's [-@mccoy_predicting_2008] theoretical relationship) developed separately for female and male `r spp`.  This assessment also applied a prior on natural mortality.  However, the prior and standard deviation were generated as a non-linear function of maximum age as developed by Then et al. [-@then_natural_mortality] and modified by  Owen Hamel which greatly improved the fit to the underlying age data to create the 'Hamel-Then' prior.  A maximum age of 100 was used in the developement of the prior where female natural moratility was set equal to `r mod1$MGparmAdj$NatM_p_1_Fem_GP_1` and male natural mortality estimated as an offset from females at `r round(mod1$MGparmAdj$NatM_p_1_Mal_GP_1,3)`.
+less than 30 years[@gunderson_population_1977].  Based on break-and-burn method of age determination using otoliths, the maximum age of `r spp` was revised to be 90 years [@chilton_age_1982]. The updated understanding concerning `r spp` longevity reduced the estimate of natural morality based on Hoenig's [-@hoenig_empirical_1983] relationship to 0.059yr^-1^. The previous assessment applied a prior distribution on natural mortality based upon multiple life history correlates (including Hoenig's method, Gunderson gonadosomatic index [-@gunderson_trade-off_1997], and McCoy and Gillooly's [-@mccoy_predicting_2008] theoretical relationship) developed separately for female and male `r spp`.  This assessment also applied a prior on natural mortality.  However, the prior and standard deviation were generated as a non-linear function of maximum age as developed by Then et al. [-@then_natural_mortality] and modified by  Owen Hamel which greatly improved the fit to the underlying age data to create the 'Hamel-Then' prior.  A maximum age of 100 was used in the developement of the prior where female natural moratility was set equal to `r mod1$MGparmAdj$NatM_p_1_Fem_GP_1` and male natural mortality estimated as an offset from females at `r round(mod1$MGparmAdj$NatM_p_1_Mal_GP_1,3)`. 
 
 \vspace{.5cm}
 
-** Sex ratio, maturation, and fecundity **
+**Sex ratio, maturation, and fecundity**
+
 Examining all biological data sources, the sex ratio of young fish are within 5% of 1:1 by either length or age (Figure \ref{fig:sexratio} and \ref{fig:sexratio_Age}), and hence this assessment the sex ratio at birth was assumed to be 1:1.  This assessment assumed a logistic maturity-at-length curve based on analysis of 537 fish maturity samples collected from the NWFSC Slope/Shelf survey.  This is revised from the previous assessment which assumed maturity-at-age based on the work of Hannah and Parker [@hannah_age-modulated_2007].  Additionally, the new maturity-at-length curve is based on the estimate of functional maturity an approach that classifies rockfish maturity with developing oocytes as mature or immature based on the proportion of vitellogenin in the cytoplasm and the
 measured frequency of atretic cells (M. Head, personal communication).  The 50% size-at-maturity was estimated at 32.1 cm with maturity asymptoting to one for larger fish.
 
@@ -665,19 +682,21 @@ The fecundity-at-age has also been updated from the previous assessment based on
 
 \vspace{.5cm}
 
-** Length-weight relationship **
+**Length-weight relationship**
+
 The length-weight relationship for `r spp` was esimated outside the model using all biological data available from fishery and fishery-independant data sources where the female weight-at-length in grams was estimated at `r mod1$MGparmAdj$Wtlen_1_Fem`$L$^`r round(mod1$MGparmAdj$Wtlen_2_Fem,2)`^ and males at `r mod1$MGparmAdj$Wtlen_1_Mal`$L$^`r round(mod1$MGparmAdj$Wtlen_2_Mal, 2)`^ where $L$ is length in cm.
 
 
 \vspace{.5cm}
 
-** Growth (length-at-age) **
+**Growth (length-at-age)**
+
 \hl{Write if estiamted or fixed in the final model}
 
-\hl{Length-at-age was initially estimated external to the population dynamics models 
+<!-- \hl{Length-at-age was initially estimated external to the population dynamics models 
 using the von Bertalanffy growth curve, $L_i = L_{\infty}e^{(-k[t-t_0])}$, 
 where $L_i$ is the length (cm) at age $i$, $t$ is age in years, $k$ is rate of 
-increase in growth, $t_0$ is the intercept, and $L_{\infty}$ is the asymptotic length.  }
+increase in growth, $t_0$ is the intercept, and $L_{\infty}$ is the asymptotic length.  } -->
 
 
 \vspace{.5cm}
@@ -1192,7 +1211,7 @@ assessment team. Not required in draft assessment undergoing review.
    # Index of abundance summary, create table   
      Fish_Length.table = xtable(Fish_Length, 
                                   caption = c('Summary of Pacific ocean perch survey length samples used in the stock assessment.'),
-                                 label = 'tab:Comm_Lengths',
+                                 label = 'tab:POP_Lengths',
                                  digits = 0)    
     # Add alignment  
       align(Fish_Length.table) = c('l',
@@ -1221,7 +1240,7 @@ assessment team. Not required in draft assessment undergoing review.
    # Index of abundance summary, create table   
      Fish_Length.table = xtable(Fish_Length, 
                                   caption = c('Summary of Triennial survey length samples used in the stock assessment.'),
-                                 label = 'tab:Comm_Lengths',
+                                 label = 'tab:TriennialLengths',
                                  digits = 0)    
     # Add alignment  
       align(Fish_Length.table) = c('l',
@@ -1249,7 +1268,7 @@ assessment team. Not required in draft assessment undergoing review.
    # Index of abundance summary, create table   
      Fish_Length.table = xtable(Fish_Length, 
                                   caption = c('Summary of AFSC slope survey length samples used in the stock assessment.'),
-                                 label = 'tab:Comm_Lengths',
+                                 label = 'tab:AFSC_Lengths',
                                  digits = 0)    
     # Add alignment  
       align(Fish_Length.table) = c('l',
@@ -1278,7 +1297,7 @@ assessment team. Not required in draft assessment undergoing review.
    # Index of abundance summary, create table   
      Fish_Length.table = xtable(Fish_Length, 
                                   caption = c('Summary of NWFSC slope survey length samples used in the stock assessment.'),
-                                 label = 'tab:Comm_Lengths',
+                                 label = 'tab:NWslope_Lengths',
                                  digits = 0)    
     # Add alignment  
       align(Fish_Length.table) = c('l',
@@ -1308,7 +1327,7 @@ assessment team. Not required in draft assessment undergoing review.
    # Index of abundance summary, create table   
      Fish_Length.table = xtable(Fish_Length, 
                                   caption = c('Summary of NWFSC shelf/slope survey length samples used in the stock assessment.'),
-                                 label = 'tab:Comm_Lengths',
+                                 label = 'tab:NWcombo_Lengths',
                                  digits = 0)    
     # Add alignment  
       align(Fish_Length.table) = c('l',
@@ -1338,7 +1357,7 @@ assessment team. Not required in draft assessment undergoing review.
    # Index of abundance summary, create table   
      Fish_Length.table = xtable(Fish_Length, 
                                   caption = c('Summary of commercial fishery age samples used in the stock assessment.'),
-                                 label = 'tab:Comm_Lengths',
+                                 label = 'tab:Comm_Ages',
                                  digits = 0)    
     # Add alignment  
       align(Fish_Length.table) = c('l',
@@ -1368,7 +1387,7 @@ assessment team. Not required in draft assessment undergoing review.
    # Index of abundance summary, create table   
      Fish_Length.table = xtable(Fish_Length, 
                                   caption = c('Summary of Pacific ocean perch survey age samples used in the stock assessment.'),
-                                 label = 'tab:Comm_Lengths',
+                                 label = 'tab:POP_Ages',
                                  digits = 0)    
     # Add alignment  
       align(Fish_Length.table) = c('l',
@@ -1397,7 +1416,7 @@ assessment team. Not required in draft assessment undergoing review.
    # Index of abundance summary, create table   
      Fish_Length.table = xtable(Fish_Length, 
                                   caption = c('Summary of Triennial survey age samples used in the stock assessment.'),
-                                 label = 'tab:Comm_Lengths',
+                                 label = 'tab:Triennial_Ages',
                                  digits = 0)    
     # Add alignment  
       align(Fish_Length.table) = c('l',
@@ -1426,7 +1445,7 @@ assessment team. Not required in draft assessment undergoing review.
    # Index of abundance summary, create table   
      Fish_Length.table = xtable(Fish_Length, 
                                   caption = c('Summary of NWFSC slope survey age samples used in the stock assessment.'),
-                                 label = 'tab:Comm_Lengths',
+                                 label = 'tab:NWslope_Ages',
                                  digits = 0)    
     # Add alignment  
       align(Fish_Length.table) = c('l',
@@ -1456,7 +1475,7 @@ assessment team. Not required in draft assessment undergoing review.
    # Index of abundance summary, create table   
      Fish_Length.table = xtable(Fish_Length, 
                                   caption = c('Summary of NWFSC shelf/slope survey age samples used in the stock assessment.'),
-                                 label = 'tab:Comm_Lengths',
+                                 label = 'tab:NWFcombo_Ages',
                                  digits = 0)    
     # Add alignment  
       align(Fish_Length.table) = c('l',
